--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 git log --no-merges --date=local --pretty=format:"%h - %ad - %an : %s"
+eb808f1 - Sat May 4 19:34:58 2013 - Sascha Kaufmann : Texte angepasst und Charerstellungs text erzeigen
+759bcd0 - Sat May 4 18:55:07 2013 - Sascha Kaufmann : Zwischenstandt Commiten
 ccfb45f - Sat May 4 18:54:19 2013 - Sascha Kaufmann : NUN: Gesundheit = MaxWert, Nahrung=Leben
 f79e880 - Sat May 4 18:41:53 2013 - Sascha Kaufmann : ADD: Skill auswirkungen
 336698c - Sat May 4 17:41:43 2013 - Alex Amling : Guild: Bugfix
