--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,6 @@ Bei Upload ins Live-System unbedingt machen!
 
 MYSQL: 
 UPDATE `char` SET `gesundheit`=5;
+
+Daten:
+Rucksack auf 28 Plätze oder 14... Damit die Zeile voll ist, von Monster bekommt man jetzt ca immer 2 Items pro Fight
