--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,6 @@ UPDATE `char` SET `gesundheit`=5;
 
 Daten:
 Rucksack auf 28 Plätze oder 14... Damit die Zeile voll ist, von Monster bekommt man jetzt ca immer 2 Items pro Fight
+
+PHP:
+Schlafen Abbrechen auch heilung
