--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-git log --no-merges --date=local --pretty=format:"%h - %ad - %an : %s" -1 
+git log --no-merges --date=local --pretty=format:"%h - %ad - %an : %s" 
+4c8f617 - Wed Jun 5 20:26:54 2013 - Sascha Kaufmann : Fix: Fehlermeldung Logout 
+9e156ed - Wed Jun 5 20:24:54 2013 - Sascha Kaufmann : Fix: Fehlermeldung bei Leiter 
+ccfa95b - Wed Jun 5 20:16:00 2013 - Sascha Kaufmann : Update SK 
 9481f50 - Wed Jun 5 20:11:50 2013 - Sascha Kaufmann : Update SK 
 4437869 - Sun Jun 2 23:37:19 2013 - Alex Amling : ??? 
 bf851c4 - Sun Jun 2 23:36:57 2013 - Alex Amling : ItemHover in function angepasst 
