--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,7 @@
 ALEX DENK IMMER AN SYNC! SONST HÄTTE ICH JETZT HALT DAS ADMIN MENÜ GEMACHT!
+ALEX ÄNDER AUCH RUHIG MAL DIE TODO
 
 *****************Bei Upload ins Live-System unbedingt machen!*****************
-Daten:
-Chancen anpassen!
 
 
 *****************Demnächst machen*****************
